@@ -1,8 +1,8 @@
-/*
-    Copyright 2010-2017, Felspar Co Ltd. http://support.felspar.com/
+/**
+    Copyright 2010-2019, Felspar Co Ltd. <http://support.felspar.com/>
+
     Distributed under the Boost Software License, Version 1.0.
-    See accompanying file LICENSE_1_0.txt or copy at
-        http://www.boost.org/LICENSE_1_0.txt
+    See <http://www.boost.org/LICENSE_1_0.txt>
 */
 
 
@@ -24,17 +24,16 @@ namespace fostlib {
         /// The logging messages themselves
         class FOST_CORE_DECLSPEC message {
             nullable<fostlib::module> opt_module;
-            nullable<string> opt_name;
 
           public:
             /// Create a message from this data
             [[deprecated(
                     "Pass a fostlib::module as the first "
-                    "argument")]] message(std::size_t, nliteral, const json &);
+                    "argument")]] message(std::size_t, f5::u8string, const json &);
             /// Create a message from this data
             message(const fostlib::module &,
                     std::size_t,
-                    nliteral,
+                    f5::u8string,
                     const json &);
 
             /// Create a log message from a JSON body forwarded from
@@ -55,7 +54,7 @@ namespace fostlib {
             /// The level of the logging message
             accessors<std::size_t> level;
             /// The name of the logging message
-            accessors<nliteral> name;
+            accessors<f5::u8string> name;
             /// The body data of the logging message
             accessors<json> body;
 
